Fix image layout shift

--- a/styles/index.css
+++ b/styles/index.css
@@ -2,8 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-.section {
+.section:not(.fp-auto-height) {
   transform: translate3d(0, 0, 0);
+  @apply h-screen w-full mx-auto flex items-center justify-center;
 }
 
 a {
